links, email, fast imga

--- a/templates/email/auto_email_admin.html
+++ b/templates/email/auto_email_admin.html
@@ -43,7 +43,7 @@
         <p><strong>Project Type:</strong> {{ project_type }}</p>
         <p><strong>Message:</strong></p>
         <p>{{ message }}</p>
-        <p>🌐 <strong>Website:</strong> <a href="https://your-portfolio-link.com" target="_blank">Visit Website</a></p>
+        <p>🌐 <strong>Website:</strong> <a href="https://vamsikrishna.site/" target="_blank">Visit Website</a></p>
     </div>
 </body>
 </html>
