--- a/templates/email/auto_email_sender.html
+++ b/templates/email/auto_email_sender.html
@@ -40,9 +40,9 @@
         <p>Thank you for contacting me through my portfolio website! 🚀 I have received your message and will respond within <strong>12 hours</strong>.</p>
         <p>If your inquiry is urgent, feel free to reach me directly:</p>
         <p>📞 <strong>Phone:</strong> 6302682957 | 8297768824<br>
-           📧 <strong>Email:</strong> <a href="mailto:vamsikrishna.nagidi@gmail.com">vamsikrishna.nagidi@gmail.com</a></p>
+           📧 <strong>Email:</strong> <a href="mailto:contact@vamsikrishna.site">contact@vamsikrishna.site</a></p>
         <p>Meanwhile, check out my latest work here: <br>
-           🌐 <a href="[Your Portfolio Link]" target="_blank">Visit My Portfolio</a></p>
+           🌐 <a href="https://vamsikrishna.site/" target="_blank">Visit My Portfolio</a></p>
         <p class="emoji">Looking forward to connecting with you! 😊</p>
         <p class="footer">Best regards,<br>
         <strong>Vamsi Krishna</strong><br>
