Working on APIs (next.js vamsi-blog)

--- a/templates/email/auto_email_sender.html
+++ b/templates/email/auto_email_sender.html
@@ -41,12 +41,18 @@
         <p>If your inquiry is urgent, feel free to reach me directly:</p>
         <p>📞 <strong>Phone:</strong> 6302682957 | 8297768824<br>
            📧 <strong>Email:</strong> <a href="mailto:contact@vamsikrishna.site">contact@vamsikrishna.site</a></p>
-        <p>Meanwhile, check out my latest work here: <br>
-           🌐 <a href="https://vamsikrishna.site/" target="_blank">Visit My Portfolio</a></p>
+    
+        <p>Meanwhile, check out my latest work here:</p>
+        <ul>
+            <li>🌐 <a href="https://vamsikrishna.site/" target="_blank">Visit My Portfolio</a></li>
+            <li>📝 <a href="https://blog.vamsikrishna.site/" target="_blank">Read My Latest Blogs</a></li>
+        </ul>
+    
         <p class="emoji">Looking forward to connecting with you! 😊</p>
         <p class="footer">Best regards,<br>
         <strong>Vamsi Krishna</strong><br>
         💻 Frontend & Backend Developer</p>
     </div>
+    
 </body>
 </html>
