--- a/static/css/admin_login.css
+++ b/static/css/admin_login.css
@@ -15,3 +15,8 @@ body {
     color: lightgray !important;
     opacity: 1; 
 }
+
+input:focus, textarea:focus{
+    border: 1px solid rgb(255, 255, 255) !important;
+    box-shadow: none !important;
+}
