--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
 
 html {
-    scroll-behavior: smooth;
-}
+    scroll-padding-top: 60px !important; 
+    scroll-behavior: smooth !important;
+  }
 
 body {
     font-family: 'Fira Code', monospace;
