--- a/templates/admin/admin_panel.html
+++ b/templates/admin/admin_panel.html
@@ -1,38 +1,21 @@
-{% load static %}
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Vamsi Krishna - Admin Panel</title>
-    <link rel="icon" type="image/png" href="{% static 'img/dp.png' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="{% static 'css/admin_pannel.css' %}">
-</head>
-<body>
-    <nav class="navbar navbar-expand-md bg-transparent">
-        <div class="container-fluid">
-            <a class="navbar-brand text-white">Welcome {{ user.username }}</a>
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
-                <i class="bi bi-menu-button fs-2 text-white"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ms-auto">
-                    <a class="nav-link mx-2 btn btn-success text-white" href="{% url 'home' %}">View Site</a>
-                    <a class="nav-link mx-2 btn btn-danger text-white" href="{% url 'logout' %}">Logout!</a>
-                </div>
-            </div>
+{% extends 'base.html' %}
+
+{% block content %}
+    {% comment %} loading animation {% endcomment %}
+    <div id="loading" class="position-fixed top-50 start-50 translate-middle">
+        <div class="spinner-border text-primary" role="status">
+          <span class="visually-hidden">Loading...</span>
         </div>
-    </nav>
-    <br>
-    <div class="container">
-        <h1 class="text-white"><span class="text-primary">#</span> Inbox:</h1>
-        <div class="table-responsive">
+      </div>
+
+    
+    <div class="container mb-5" id="emails">
+        <h4 class="text-white"><span class="text-primary">/</span>Email inbox</h4>
+        <div class="table-responsive mb-5">
             <table class="table table-striped table-dark table-hover">
                 <thead>
                     <tr>
-                        <th>No</th>
+                        <th>#</th>
                         <th>Name</th>
                         <th>Email</th>
                         <th>Phone</th>
@@ -43,34 +26,101 @@
                         <th>Action</th>
                     </tr>
                 </thead>
-                <tbody>
-                    {% for msg in messages %}
-                    <tr>
-                        <td>{{ forloop.counter }}</td>
-                        <td>{{ msg.name }}</td>
-                        <td>{{ msg.email }}</td>
-                        <td>{{ msg.phone }}</td>
-                        <td>{{ msg.title }}</td>
-                        <td>{{ msg.project_type }}</td>
-                        <td>{{ msg.message }}</td>
-                        <td>{{ msg.created_at }}</td>
-                        <td>
-                          <a href="#" 
-                             class="btn btn-danger btn-sm" 
-                             onclick="showDeleteModal('{% url 'delete_message' msg.id %}');">
-                             Delete
-                          </a>
-                      </td>                                  
-                    </tr>
-                    {% empty %}
-                    <tr>
-                        <td colspan="9" class="text-center">No messages found</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+                <tbody id="emailTableBody">
+                  {% for msg in messages %}
+                  <tr class="email-row" {% if forloop.counter > 5 %} style="display: none;" {% endif %}>
+                      <td>{{ forloop.counter }}</td>
+                      <td>{{ msg.name }}</td>
+                      <td>{{ msg.email }}</td>
+                      <td>{{ msg.phone }}</td>
+                      <td>{{ msg.title }}</td>
+                      <td>{{ msg.project_type }}</td>
+                      <td>{{ msg.message }}</td>
+                      <td>{{ msg.created_at }}</td>
+                      <td>
+                          <a href="#" class="btn btn-danger btn-sm" onclick="showDeleteModal('{% url 'delete_message' msg.id %}');">Delete</a>
+                      </td>
+                  </tr>
+                  {% empty %}
+                  <tr>
+                      <td colspan="9" class="text-center">No messages found</td>
+                  </tr>
+                  {% endfor %}
+              </tbody>
+              </table>
         </div>
-    </div>
+
+        <div class="text-center">
+            <button id="seeMoreBtn" class="btn btn-primary mt-2" onclick="showMoreEmails()">See More</button>
+            <button id="showLessBtn" class="btn btn-secondary mt-2" onclick="showLessEmails()" style="display: none;">Show Less</button>
+          </div>
+
+
+        {% comment %} subscribers  {% endcomment %}
+        <h4 class="text-white"><span class="text-primary">/</span>Blog newsletter subscribers</h4>
+        <div class="table-responsive mb-5">
+            <table class="table table-striped table-dark table-hover">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Subscribed_at</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody id="emailTableBody">
+                  {% for subscriber_user in subscribers %}
+                  <tr>
+                      <td>{{ forloop.counter }}</td>
+                      <td>{{ subscriber_user.name }}</td>
+                      <td>{{ subscriber_user.email }}</td>
+                      <td>{{ subscriber_user.subscribed_at }}</td>
+                      <td>
+                        <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal{{ subscriber_user.email }}">
+                            Remove
+                        </button>                     
+                       </td>
+                  </tr>
+
+                  <!-- Delete subscribers Confirmation Modal -->
+                    <div class="modal fade" id="deleteModal{{ subscriber_user.email }}" tabindex="-1" aria-labelledby="deleteModalLabel{{ subscriber_user.email }}" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content" style="background-color: #282c33; color: white;">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="deleteModalLabel{{ subscriber_user.email }}">Confirm Remove</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
+                                </div>
+                                <div class="modal-body">
+                                    Are you sure you want to remove the email 
+                                    "<strong class="text-primary">{{ subscriber_user.email }}</strong>" 
+                                    from the subscribers list?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+
+                                    {% if subscriber_user.email %}
+                                        <form action="{% url 'delete_subscriber' subscriber_user.email %}" method="POST" style="display: inline;">
+                                            {% csrf_token %}
+                                            <button type="submit" class="btn btn-danger">Yes, Remove</button>
+                                        </form>
+                                    {% else %}
+                                        <p class="text-warning">Email not available</p>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                  {% empty %}
+                  <tr>
+                      <td colspan="9" class="text-center">No subscribers found</td>
+                  </tr>
+                  {% endfor %}
+              </tbody>
+              </table>
+        </div>
+
+
 
     <!-- Delete Confirmation Modal -->
     <div class="modal fade" id="deleteConfirmModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
@@ -91,14 +141,68 @@
       </div>
     </div>
 
+
+
+
+
+
     <script>
+        // loading Animation
+        window.addEventListener('load', function() {
+            // console.log('Page fully loaded'); 
+            document.getElementById('loading').style.display = 'none';
+        });
+
       function showDeleteModal(deleteUrl) {
           let confirmBtn = document.getElementById("confirmDeleteBtn");
           confirmBtn.setAttribute("href", deleteUrl); // Set the delete URL dynamically
           let deleteModal = new bootstrap.Modal(document.getElementById("deleteConfirmModal"));
           deleteModal.show(); // Show the modal
       }
+
+      let visibleEmails = 5;
+      let emails = document.querySelectorAll(".email-row");
+  
+      function showMoreEmails() {
+          let count = 0;
+          for (let i = visibleEmails; i < emails.length && count < 5; i++) {
+              emails[i].style.display = "table-row";
+              count++;
+          }
+  
+          visibleEmails += count;
+  
+          // Hide "See More" if all emails are displayed
+          if (visibleEmails >= emails.length) {
+              document.getElementById("seeMoreBtn").style.display = "none";
+          }
+  
+          // Show "Show Less" button
+          if (visibleEmails > 5) {
+              document.getElementById("showLessBtn").style.display = "inline-block";
+          }
+      }
+  
+      function showLessEmails() {
+          for (let i = 5; i < emails.length; i++) {
+              emails[i].style.display = "none";
+          }
+  
+          visibleEmails = 5;
+  
+          // Hide "Show Less" button
+          document.getElementById("showLessBtn").style.display = "none";
+  
+          // Show "See More" button again
+          if (emails.length > 5) {
+              document.getElementById("seeMoreBtn").style.display = "inline-block";
+          }
+      }
+  
+      // Hide "See More" button if emails are 5 or less
+      if (emails.length <= 5) {
+          document.getElementById("seeMoreBtn").style.display = "none";
+      }
       </script>      
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+{% endblock %}
+
