--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vamsi Krishna</title>
-    <link rel="icon" type="image/png" href="{% static 'img/dp.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'img/urlicon.webp' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -37,6 +37,7 @@
               <a class="nav-link" name="about" href="#about"><span class="hilate-text">#</span>about</a>
               <a class="nav-link" name="services" href="#services"><span class="hilate-text">#</span>services</a>
               <a class="nav-link" name="contact" href="#contact"><span class="hilate-text">#</span>contact</a>
+              <a class="nav-link" name="blog" href="https://blog.vamsikrishna.site/"><span class="hilate-text">#</span>blog</a>
             </div>
           </div>
         </div>
@@ -64,7 +65,7 @@
                     <a href="#contact" class="custom-buttons btn btn-outline-primary border-0">Contact me!!</a>
                 </div>
 
-                <!-- Add this to your base template (e.g., base.html) -->
+                {% comment %} loading animation {% endcomment %}
                 <div id="loading" class="position-fixed top-50 start-50 translate-middle">
                   <div class="spinner-border text-primary" role="status">
                     <span class="visually-hidden">Loading...</span>
@@ -112,6 +113,28 @@
               <div class="col-12 col-md-6 col-lg-4"> 
                 <div class="card h-auto d-flex flex-column">
                   <img src="{% static 'img/projects/2.png' %}" class="card-img-top" alt="Project Image">
+                  <div class="card-header passage-text">React, Next.js, Django REST Framework (DRF), Django Templates (Admin)</div>
+                  <div class="card-body d-flex flex-column flex-grow-1">
+                    <div class="card-title">Vamsi-Blog: SEO-Friendly Next.js React Tech Blog with Django DRF</div>
+                    <p class="card-text passage-text flex-grow-1">
+                      A full-stack tech blog platform featuring dynamic content, user engagement, and admin management.     
+                    </p>
+                    <div>
+                      <a target="_blank" href="https://github.com/vamsikrishna7-github/vamsi-blog.git" class="btn btn-outline-primary rounded-0 custom-buttons" type="button">
+                        GitHub <img width="20" height="20" src="https://img.icons8.com/ios-filled/100/FFFFFF/source-code.png" alt="GitHub Icon"/>
+                      </a>
+                      <a target="_blank" href="https://blog.vamsikrishna.site/" class="btn btn-outline-primary rounded-0 custom-buttons" type="button">
+                        Live <img width="20" height="20" src="https://img.icons8.com/material-rounded/192/FFFFFF/youtube-live.png" alt="Live Icon"/>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Project Card 2 -->
+              <div class="col-12 col-md-6 col-lg-4"> 
+                <div class="card h-auto d-flex flex-column">
+                  <img src="{% static 'img/projects/2.png' %}" class="card-img-top" alt="Project Image">
                   <div class="card-header passage-text">reCAPTCHA send_mail EmailMessage SQLite Django Python HTML CSS JavaScript Bootstrap</div>
                   <div class="card-body d-flex flex-column flex-grow-1">
                     <div class="card-title">Dynamic Portfolio with Admin Panel & Auto-Emails</div>
@@ -130,7 +153,7 @@
                 </div>
               </div>
 
-              <!-- Project Card 2 -->
+              <!-- Project Card 3 -->
               <div class="col-12 col-md-6 col-lg-4"> 
                 <div class="card h-auto d-flex flex-column">
                   <img src="{% static 'img/projects/1.jpg' %}" class="card-img-top" alt="Project Image">
@@ -155,7 +178,7 @@
                 </div>
               </div>
       
-              <!-- Project Card 3 -->
+              <!-- Project Card 4 -->
               <div class="col-12 col-md-6 col-lg-4"> 
                 <div class="card h-auto d-flex flex-column">
                   <img src="{% static 'img/projects/4.jpg' %}" class="card-img-top" alt="Project Image">
@@ -177,7 +200,7 @@
                 </div>
               </div>
 
-              <!-- Project Card 4 -->
+              <!-- Project Card 5 -->
               <div class="show-hide-projects col-12 col-md-6 col-lg-4 d-none"> 
                 <div class="card h-auto d-flex flex-column">
                   <img src="{% static 'img/projects/3.jpg' %}" class="card-img-top" alt="Project Image">
@@ -747,9 +770,10 @@
         </div>
     
       </div>
-    
+      
       <!-- Copyright -->
-      <p class="text-center mt-3 mb-0 passage-text">© 2024. Made by Vamsi Krishna</p>
+      <p class="text-center mt-3 mb-0 passage-text"><i class="bi bi-eye"></i> Total Views: {{ views }}</p>
+      <p class="text-center mt-1 mb-0 passage-text">© 2024. Made by Vamsi Krishna</p>
     </footer>
     </div>
 
