--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link mx-2 text-white " href="{% url 'admin_panel' %}"><span class="text-primary">#</span>Home</a>
+                    <a class="nav-link mx-2 text-white" href="{% url 'create_product' %}"><span class="text-primary">#</span>Create Product</a>
                     <a class="nav-link mx-2 text-white" href="{% url 'blog_post_list' %}"><span class="text-primary">#</span>View all Posts</a>
                     <a class="nav-link mx-2 text-white" href="{% url 'create_blog_post' %}"><span class="text-primary">#</span>Create Post</a>
                     <a class="nav-link mx-2 text-white" href="{% url 'home' %}"><i class="bi bi-house text-success fs-5"></i>View Site</a>
