--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,7 @@
               <a class="nav-link" name="about" href="#about"><span class="hilate-text">#</span>about</a>
               <a class="nav-link" name="services" href="#services"><span class="hilate-text">#</span>services</a>
               <a class="nav-link" name="contact" href="#contact"><span class="hilate-text">#</span>contact</a>
+              <a class="nav-link" name="blog" href="{% url 'templates' %}"><span class="hilate-text">#</span>templates</a>
               <a class="nav-link" name="blog" href="https://blog.vamsikrishna.site/"><span class="hilate-text">#</span>blog</a>
             </div>
           </div>
@@ -47,7 +48,7 @@
     <div class="container">
         <!-- home_section -->
       <section id="home">
-        <div class="container">
+        <div class="container mt-5">
             <div class="d-flex flex-column flex-md-row align-items-center">
     
                 <!-- Left Section - Text -->
