--- a/templates/admin/admin_login.html
+++ b/templates/admin/admin_login.html
@@ -14,7 +14,7 @@
     <div class="container d-flex flex-column justify-content-center  vh-100  text-white">
         <div class="container col-md-6 col-sm-12 border border-secondary">
             <br>
-            <h1 class=" display-4 text-center mb-3"><img width="45" height="45" src="https://img.icons8.com/ios-filled/100/228BE6/admin-settings-male.png" alt="admin-settings-male"/>admin Login</h1>
+            <h1 class=" display-4 text-center mb-3"><i class="bi bi-person-fill-lock me-2 text-primary"></i> admin Login</h1>
             {% if messages %}
             {% for message in messages %}
                 {% if "error" in message.tags %}
